[package]
name = "rect"
version = "0.1.0"
edition = "2018"


[dependencies]
web3 = { git = "https://github.com/tomusdrw/rust-web3" }
# optional 不能设置
tokio = { version = "0.2", features = ["full"] }
secp256k1 = { version = "0.19", features = ["recovery"] }
futures = "0.3.5"
clap = "3.0.0-beta.2"
hex = "0.4.2"
log = "0.4.6"


[dev-dependencies]
tokio = { version = "0.2", features = ["full"] }
